--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 .css-1i5alow-MuiButtonBase-root-MuiFab-root-MuiSpeedDial-fab {
   min-height: 50px !important;
 }
+.App{
+  background-color: #1976D2;
+ margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+height:1000px;
+
+
+
+}
